2007-08-19 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/ipc.rb: Moved IPC::send and IPC::find to IPC::Instance
    module. It makes more sense to use this namespace.
    * lib/fantasdic/ui.rb: Applied the necessary modifications to follow above
    change.
    * lib/fantasdic/ui/main_app.rb: Likewise.

2007-08-18 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/ipc.rb: Added an IPC backend using win32 named pipes
    thanks to win32/pipe from the win32-utils package. Three backends are
    now available:

    - Named pipes. This uses win32/pipe from the win32-utils package. This
    approach is preferred on win32.
    - DRb (Distributed Ruby). This approach is portable but its main
    disadvantage is that it may be blocked by the local firewall.
    - X11. This works by creating an invisible window, setting a uniquely named
    atom on the root window which refers to the invisible window (so other
    instances can find the window) and watching for property change events
    on the invisible window. This approach is preferred on Unix.

2007-08-18 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui.rb: Renamed "win" variable to "instance". IPC now
    supported by window.
    * lib/fantasdic/ui/main_app.rb: IPC::Window renamed to IPC::Instance.
    * lib/fantasdic/ui/ipc.rb: Simple IPC mechanism using DRb (Distributed
    Ruby). This mechanism is used for Windows. IPC using X11 is kept for the
    rest. This allows to make Fantasdic a single-instance program on Windows
    too.

2007-08-18 Mathieu Blondel <mblondel@cvs.gnome.org>

    * pre-setup.rb: Don't fail if there's a problem with a .po file. Just
    display a warning.

2007-08-18 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic.rb: New WIN32 constant.
    * lib/fantasdic/ui.rb: Use this constant.
    * lib/fantasdic/preferences.rb: Use this constant.
    * bin/pre-setup.rb: Don't use uname -a on Win32, don't hardcode ruby path